[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-generation-system"
version = "1.0.0"
description = "AI-powered chart generation system using LangGraph and PyEcharts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["charts", "visualization", "ai", "pyecharts", "langraph", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    # Core dependencies
    "streamlit>=1.29.0",
    "pyecharts>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    
    # LangChain and LangGraph
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.1",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.13",
    "langgraph>=0.0.20",
    
    # AI and API
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    
    # Data generation
    "faker>=20.0.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

png = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pillow>=10.0.0",
]

all = [
    "chart-generation-system[dev,png]",
]

[project.scripts]
chart-gen = "chart_agent.main:main"
batch-gen = "generate_chart_pipeline:main"
convert-png = "convert_html_to_png:main"

[tool.setuptools.packages.find]
include = ["chart_agent*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
